# mneme

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml  entrypoint.sh
.github/workflows/: build.yml
app/src/: agent.py  config.py  main.py  mcp_tools.py  memory_store.py
deploy/quadlet/: README.md  app.env.example  mneme.container  mneme.env.example  qq-agent.container  qq-agent.env.example  qqbot.env.example
qqbot/: ai_client.go  config.go  processor.go
scripts/: start.ps1  start.sh
src/: agent.rs  api.rs  cli.rs  config.rs  embedding.rs  image.rs  llm.rs  main.rs  mcp.rs  qq.rs  reranker.rs  shutdown.rs  store.rs
static/: index.html
tests/: test_pure_functions.py
