[package]
name = "mneme"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
ed25519-dalek = "3"
futures-util = "0.3"
hex = "0.4"
regex = "1"
thiserror = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2", "stream"] }
# 网页正文抽取（readability 移植）+ HTML 转 Markdown，供内置 fetch_url 工具用，纯 Rust 无 C 依赖。
dom_smoothie = "0.18"
htmd = "0.5"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
